# Poros

./: .gitignore  README.md  main.py  pyproject.toml
poros/: __init__.py  _geometry.py  _pipeline.py  _types.py  cli.py  gallery.py
poros/detectors/: __init__.py  _adaptive.py  _base.py  _bottomhat.py  _common.py  _gaussian.py  _log.py  _ridge.py  _watershed.py
poros/evaluation/: __init__.py  _base.py  _metrics.py  _report.py
poros/fusion/: __init__.py  _base.py  _voting.py
poros/segmentation/: __init__.py  _base.py  _otsu.py
poros/viz/: __init__.py  _render.py  _viewer.py
